--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/bwallspt/poker-tracker-backend#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "randomstring": "^1.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/randomstring": "^1.1.8",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
